--- a/Sabõrna.mw
+++ b/Sabõrna.mw
@@ -10,5 +10,12 @@
 }}
 '''Sabõrna''' vai '''Savõrna''' om [[külä]] [[Valgjärve vald|Valgjärve vallan]] [[Kanepi kihlkund|Kanepi kihlkunnan]].
 
+<gallery>
+Valgjärve vallavalitsus.JPG|
+Saverna lasteaed.JPG|
+Saverna põhikool.JPG|
+Saverna Põhikooli võimla.JPG|
+</gallery>
+
 [[Katõgooria:Kanepi kihlkunna küläq]]
 [[Katõgooria:Valgjärve vald]]
